--- a/src/mmw/sass/components/_layerpicker.scss
+++ b/src/mmw/sass/components/_layerpicker.scss
@@ -2,7 +2,7 @@
   z-index: 500;
   position: absolute;
   bottom: 22px;
-  right: $right-controls-margin;
+  left: $map-controls-margin;
   width: $layerpicker-width;
   background-color: #fff;
   border-radius: 2px;
