--- a/src/mmw/sass/utils/_variables.scss
+++ b/src/mmw/sass/utils/_variables.scss
@@ -47,7 +47,7 @@ $search-width: 300px;
 //Border-radius
 $radius-sm: 2px;
 
-$right-controls-margin: 12px;
+$map-controls-margin: 12px;
 
 $nlcdColors: (
     11: #5475A8,
